updated pipeline