@@ -31,6 +31,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+
                 </configuration>
             </plugin>
             <plugin>
